# CollectorGO

./: .gitignore  API kobo tools.xlsx  README.md  plan.md
app/: App.tsx  app.json  package-lock.json  package.json  tsconfig.json
app/src/components/: FormCard.tsx  LoadingOverlay.tsx
app/src/constants/: config.ts  forms.ts
app/src/context/: AuthContext.tsx
app/src/hooks/: useAuth.ts
app/src/navigation/: AppNavigator.tsx
app/src/screens/: FormWebViewScreen.tsx  FormsListScreen.tsx  LoginScreen.tsx  SplashScreen.tsx
backend/: .env.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  seed.py  test_connection.py
backend/alembic/: env.py
backend/alembic/versions/: 16572fae9f50_initial.py  27d61b9b023b_fixing_everything.py  3cb5526d691b_add_form_assignment_model.py  8b40634ac826_add_form_model.py
backend/app/: main.py
backend/app/api/v1/: auth.py  form_assignments.py  forms.py  users.py
backend/app/core/: config.py  dependencies.py  lifespan.py  logging.py  security.py
backend/app/db/: base.py  database.py  session.py
backend/app/models/: base.py  enums.py  form.py  form_assignment.py  organization.py  user.py
backend/app/repositories/: form_assignment_repository.py  form_repository.py  organization_repository.py  user_repository.py
backend/app/schemas/: auth.py  form.py  form_assignment.py  user.py  uses.py
backend/app/services/: auth_services.py  form_assignment_service.py  form_service.py  user_service.py
dashboard/: package-lock.json  package.json
dashboard/app/: layout.tsx  page.tsx
dashboard/components/: ProtectedLayout.tsx
dashboard/hooks/: useApi.ts
dashboard/services/: api.ts
dashboard/types/: index.ts
(+5 files in other folders)
