[project]
name = "collectorgo-backend"
version = "1.0.0"
description = "CollectorGO Backend"
requires-python = ">=3.12,<3.13"

dependencies = [
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.35.0",
    "sqlalchemy>=2.0.42",
    "asyncpg>=0.30.0",
    "psycopg[binary]>=3.2.9",
    "alembic>=1.16.4",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.20",
    "orjson>=3.11.1",
    "httpx>=0.28.1",
    "email-validator>=2.2.0",
    "python-dotenv>=1.1.1",
    "structlog>=25.4.0",
    "greenlet>=3.2.3",
    "asgi-lifespan>=2.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.5",
    "black>=25.1.0",
    "mypy>=1.17.1"
]
